# runas

./: Cargo.toml  README.md  build.rs  runas  runas.rules
implementation/: Makefile  README.md  authenticate.c  authenticate.h  common.c  common.h  read_passwd.c  read_passwd.h  runas.c  runas.h
rust-impl/: Cargo.toml  README.md  README.txt  build.rs  make.sh
rust-impl/.cargo/: config.toml
rust-impl/src/: lib.rs  main.rs
rust-impl/src/modules/: auth.rs  mod.rs  pam_ffi.rs  passwd.rs  shadow_ffi.rs  shared.rs  user.rs
src/: lib.rs  main.rs  shared.rs
src/ffi/: pam.rs  shadow.rs
src/modules/: auth.rs  mod.rs  pam_ffi.rs  passwd.rs  path.rs  proc.rs  shared.rs  user.rs
