[package]
name = "runas"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Daniel Bergløv <d.bergloev@cloudhome.dk>"]
repository = "https://github.com/dbergloev/runas"

[dependencies]
getopts = "0.2"
libc = "0.2"
nix = "0.26"
bitflags = "2.5"
atty = "0.2"
cfg-if = "1"
zeroize = "1.5"

[build-dependencies]
bindgen = "0.66"

[features]
without_expand_env = []         # cargo build --features without_expand_env
use_pam = []                    # RUSTFLAGS="-l pam" cargo build --features use_pam
backend_run0 = []               # Use run0 instead of systemd-run directly
backend_scopex = []             # Bypass systemd-run completely and directly communicate with systemd

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = "symbols"
