[package]
name = "runas"
version = "1.2.0"
edition = "2024"
license = "MIT"
authors = ["Daniel Bergløv <d.bergloev@cloudhome.dk>"]
repository = "https://github.com/dbergloev/runas"

[dependencies]
nix = { version = "0.26", default-features = false, features = [
    "fs",        # for stat, open, OFlag
    "process",   # for fork, waitpid, execve
    "signal",    # for signals
    "term",      # for termios
    "user",      # for Uid, Gid, etc.
] }
getopts = "0.2"
bitflags = "2.5"
atty = "0.2"
cfg-if = "1"
zeroize = "1.5"

[build-dependencies]
bindgen = { version = "0.66", optional = true }

[features]
without_expand_env = []         # cargo build --features without_expand_env
use_pam = ["bindgen"]           # RUSTFLAGS="-l pam" cargo build --features use_pam
backend_run0 = []               # Use run0 instead of systemd-run directly
backend_scopex = []             # Bypass systemd-run completely and directly communicate with systemd

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = "symbols"
