[package]
name = "runas"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Daniel Bergløv <d.bergloev@cloudhome.dk>"]
repository = "https://github.com/dbergloev/runas"

[dependencies]
getopts = "0.2"
libc = "0.2"
nix = "0.26"
bitflags = "2.5"
atty = "0.2"

[features]
without_expand_env = []     # cargo build --features without_expand_env
use_pam = []                # RUSTFLAGS="-l pam" cargo build --features use_pam

